--- a/index.html
+++ b/index.html
@@ -45,17 +45,23 @@
     {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير ممرات","description":"ممرات للزينة والمناسبات الخاصة مع تصاميم جذابة، كلمات مفتاحية: ممرات، تأجير ممرات، زينة حفلات، ديكور ممرات، تجهيز حفلات.","url":"https://www.lamasat.store/walkways.html","serviceType":"Rental"}},
     {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير زل","description":"تأجير زل للمناسبات والحفلات مع تركيب سريع، كلمات مفتاحية: زل، تأجير زل، تجهيز حفلات، مناسبات، تنظيم حفلات.","url":"https://www.lamasat.store/zel.html","serviceType":"Rental"}},
     {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير سجاد","description":"سجاد للممرات والفعاليات مع تصاميم مختلفة، كلمات مفتاحية: سجاد، تأجير سجاد، ديكور حفلات، مناسبات، تجهيز حفلات.","url":"https://www.lamasat.store/carpets.html","serviceType":"Rental"}},
-  ]
-  "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.9", "reviewCount": "40" },
-  "faq": {
-    "@type": "FAQPage",
-    "mainEntity": [
-      { "@type": "Question", "name": "أين يمكنني استئجار الطاولات والكراسي في الدمام؟", "acceptedAnswer": { "@type": "Answer", "text": "يمكنك استئجار الطاولات والكراسي مباشرة من فرع الدمام أو عبر التواصل معنا." } },
-      { "@type": "Question", "name": "ما هو سعر تأجير الكنب في جدة؟", "acceptedAnswer": { "@type": "Answer", "text": "سعر تأجير الكنب في جدة يبدأ من 100 ريال حسب النوع والحجم." } },
-      { "@type": "Question", "name": "هل تتوفر جلسات شعبية ومغربية في الرياض؟", "acceptedAnswer": { "@type": "Answer", "text": "نعم، تتوفر جلسات شعبية ومغربية لجميع المناسبات في الرياض." } },
-      { "@type": "Question", "name": "كيف يمكن التواصل للحجز؟", "acceptedAnswer": { "@type": "Answer", "text": "يمكنك التواصل عبر رقم الواتساب +966559534118 أو الاتصال المباشر." } }
-    ]
+    }
   }
+],
+"aggregateRating": { 
+  "@type": "AggregateRating", 
+  "ratingValue": "4.9", 
+  "reviewCount": "40" 
+},
+"faq": {
+  "@type": "FAQPage",
+  "mainEntity": [
+    { "@type": "Question", "name": "أين يمكنني استئجار الطاولات والكراسي في الدمام؟", "acceptedAnswer": { "@type": "Answer", "text": "يمكنك استئجار الطاولات والكراسي مباشرة من فرع الدمام أو عبر التواصل معنا." } },
+    { "@type": "Question", "name": "ما هو سعر تأجير الكنب في جدة؟", "acceptedAnswer": { "@type": "Answer", "text": "سعر تأجير الكنب في جدة يبدأ من 100 ريال حسب النوع والحجم." } },
+    { "@type": "Question", "name": "هل تتوفر جلسات شعبية ومغربية في الرياض؟", "acceptedAnswer": { "@type": "Answer", "text": "نعم، تتوفر جلسات شعبية ومغربية لجميع المناسبات في الرياض." } },
+    { "@type": "Question", "name": "كيف يمكن التواصل للحجز؟", "acceptedAnswer": { "@type": "Answer", "text": "يمكنك التواصل عبر رقم الواتساب +966559534118 أو الاتصال المباشر." } }
+  ]
+}
 </script>
   
     <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17518401958"></script> 
