--- a/index.html
+++ b/index.html
@@ -44,11 +44,9 @@
     {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير حواجز","description":"حواجز تنظيمية للحفلات والمناسبات لتسهيل إدارة المكان، كلمات مفتاحية: حواجز، تأجير حواجز، تنظيم مناسبات، تنظيم حفلات، تجهيز حفلات.","url":"https://www.lamasat.store/barriers.html","serviceType":"Rental"}},
     {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير ممرات","description":"ممرات للزينة والمناسبات الخاصة مع تصاميم جذابة، كلمات مفتاحية: ممرات، تأجير ممرات، زينة حفلات، ديكور ممرات، تجهيز حفلات.","url":"https://www.lamasat.store/walkways.html","serviceType":"Rental"}},
     {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير زل","description":"تأجير زل للمناسبات والحفلات مع تركيب سريع، كلمات مفتاحية: زل، تأجير زل، تجهيز حفلات، مناسبات، تنظيم حفلات.","url":"https://www.lamasat.store/zel.html","serviceType":"Rental"}},
-    {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير سجاد","description":"سجاد للممرات والفعاليات مع تصاميم مختلفة، كلمات مفتاحية: سجاد، تأجير سجاد، ديكور حفلات، مناسبات، تجهيز حفلات.","url":"https://www.lamasat.store/carpets.html","serviceType":"Rental"}},
-     }
-   }
- ]
-}
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير سجاد","description":"سجاد للممرات والفعاليات مع تصاميم مختلفة، كلمات مفتاحية: سجاد، تأجير سجاد، ديكور حفلات، مناسبات، تجهيز حفلات.","url":"https://www.lamasat.store/carpets.html","serviceType":"Rental"}}
+   ]
+  }
 "aggregateRating": { 
   "@type": "AggregateRating", 
   "ratingValue": "4.9", 
