--- a/index.html
+++ b/index.html
@@ -1193,15 +1193,21 @@
           "acceptedAnswer": {"@type": "Answer","text":"يمكنك الاستئجار مباشرة من فرع الدمام أو عبر التواصل معنا."}
         },
         {
-          "@type": "Question",
-          "name": "ما هو سعر تأجير الكنب في الدمام",
-          "acceptedAnswer": {"@type": "Answer","text":"سعر تأجير الكنب في جدة يبدأ من 100 ريال حسب النوع والحجم."}
-      {
-        "@type": "Question",
-        "name": "ما هي أسعار تأجير الكنب؟",
-        "acceptedAnswer": { "@type": "Answer", "text": "أسعار تأجير الكنب تبدأ من 100 ريال حسب النوع والحجم." }
-      },
-      {
+  "@type": "Question",
+  "name": "ما هو سعر تأجير الكنب في الدمام",
+  "acceptedAnswer": {
+    "@type": "Answer",
+    "text": "سعر تأجير الكنب في جدة يبدأ من 100 ريال حسب النوع والحجم."
+  }
+},
+{
+  "@type": "Question",
+  "name": "ما هي أسعار تأجير الكنب؟",
+  "acceptedAnswer": {
+    "@type": "Answer",
+    "text": "أسعار تأجير الكنب تبدأ من 100 ريال حسب النوع والحجم."
+    }
+  }
         "@type": "Question",
         "name": "هل تتوفر جلسات شعبية ومغربية؟",
         "acceptedAnswer": { "@type": "Answer", "text": "نعم، تتوفر جلسات شعبية ومغربية لجميع المناسبات حسب عدد الضيوف." }
