--- a/index.html
+++ b/index.html
@@ -1159,83 +1159,80 @@
     }, { passive: true });
   </script>
 
-  <!-- ✅ كود العناصر الغنية لجميع الخدمات -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "LocalBusiness",
-    "name": "لمسة لتأجير مستلزمات الحفلات",
-    "image": ["https://i.postimg.cc/3RMt9K5c/27.jpg","https://i.postimg.cc/6Xy0tHrm/28.jpg"],
-    "telephone": "+966559534118",
-    "url": "https://www.lamasat.store",
-    "areaServed": [
-      {"@type": "City","name":"الدمام"},
-      {"@type": "City","name":"الرياض"},
-      {"@type": "City","name":"جدة"},
-      {"@type": "City","name":"الخبر"}
-    ],
-    "hasOfferCatalog": {
-      "@type": "OfferCatalog",
-      "name": "خدمات التأجير",
-      "itemListElement": [
-        {"@type":"Offer","itemOffered":{"@type":"Product","name":"تأجير كراسي","description":"كراسي عالية الجودة","image":"https://i.postimg.cc/3RMt9K5c/27.jpg"},"priceCurrency":"SAR","price":"50"},
-        {"@type":"Offer","itemOffered":{"@type":"Product","name":"تأجير طاولات","description":"طاولات لجميع الحفلات","image":"https://i.postimg.cc/6Xy0tHrm/28.jpg"},"priceCurrency":"SAR","price":"80"}
-      ]
-    },
-    "aggregateRating":{"@type":"AggregateRating","ratingValue":"4.9","reviewCount":"32"},
-    
-    "faq": {
-      "@type": "FAQPage",
-      "mainEntity": [
-        {
-          "@type": "Question",
-          "name": "أين يمكنني استئجار الطاولات والكراسي في الدمام؟",
-          "acceptedAnswer": {"@type": "Answer","text":"يمكنك الاستئجار مباشرة من فرع الدمام أو عبر التواصل معنا."}
-      },
-   { 
-  "@type": "Question",
-  "name": "ما هو سعر تأجير الكنب في الدمام",
-  "acceptedAnswer": {
-    "@type": "Answer",
-    "text": "سعر تأجير الكنب في جدة يبدأ من 100 ريال حسب النوع والحجم."
- },
+  <!-- تعريف الشعار لمحركات البحث (Google Logo Schema) -->
+<script type="application/ld+json">
 {
-  "@type": "Question",
-  "name": "ما هي أسعار تأجير الكنب؟",
-  "acceptedAnswer": {
-    "@type": "Answer",
-    "text": "أسعار تأجير الكنب تبدأ من 100 ريال حسب النوع والحجم."
-   },
-  {
-        "@type": "Question",
-        "name": "هل تتوفر جلسات شعبية ومغربية؟",
-        "acceptedAnswer": { "@type": "Answer", "text": "نعم، تتوفر جلسات شعبية ومغربية لجميع المناسبات حسب عدد الضيوف." }
-      },
-     {
-        "@type": "Question",
-        "name": "هل تقدمون شاشات ومكبرات صوت؟",
-        "acceptedAnswer": { "@type": "Answer", "text": "نعم، نقدم شاشات، مكبرات صوت وسماعات لجميع المناسبات." }
-      },
-      {
-        "@type": "Question",
-        "name": "هل لديكم خدمة التوصيل والتركيب؟",
-        "acceptedAnswer": { "@type": "Answer", "text": "نعم، نقدم خدمة التوصيل والتركيب لجميع المدن خلال 2-4 ساعات حسب الموقع." }
-      },
-      {
-        "@type": "Question",
-        "name": "هل يمكن استئجار المعدات ليوم واحد فقط؟",
-        "acceptedAnswer": { "@type": "Answer", "text": "نعم، يمكن استئجار أي خدمة ليوم واحد أو أكثر حسب رغبتك." }
-      },
-      {
-        "@type": "Question",
-        "name": "كيف يمكن التواصل للحجز؟",
-        "acceptedAnswer": { "@type": "Answer", "text": "يمكنك التواصل عبر رقم الواتساب +966559534118 أو الاتصال المباشر." }
-        }
-      ]
-    }
-  }
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "تأجير كراسي ملكية تأجير طاولات حفلات تأجير خيام مناسبات تأجير شاشات كبيرة تأجير كوش أفراح",
+  "url": "https://www.example.com",
+  "logo": "https://i.postimg.cc/3wMrKbN0/logo.png"
+}
 </script>
 
+<!-- FAQ Schema -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "ما هي أسعار تأجير الخيام وكراسي الأفراح في الخبر؟",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "تبدأ الأسعار من 150 ريال حسب نوع الخيمة وعدد الكراسي المطلوبة مع إمكانية التوصيل السريع داخل الخبر."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "هل تقدمون خدمة الديكور مع الكوش؟",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "نعم، نوفر خدمة ديكور متكاملة مع الكوش وطاولات الضيافة تشمل الإضاءة والسجاد الأحمر."
+      }
+    }
+  ]
+}
+</script>
+
+<!-- JSON-LD لتعريف النشاط التجاري المحلي -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "تأجير خيام وكراسي وطاولات في الخبر",
+  "image": "https://i.postimg.cc/QxMDh9df/favicon.png",
+  "url": "https://www.lamasat.store",
+  "telephone": "+966559534118",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "طريق الملك عبد الله",
+    "addressLocality": "الخبر",
+    "addressRegion": "المنطقة الشرقية",
+    "postalCode": "34714",
+    "addressCountry": "SA"
+  },
+  "openingHoursSpecification": [
+    {
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": [
+        "Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"
+      ],
+      "opens": "08:00",
+      "closes": "23:00"
+    }
+  ],
+  "priceRange": "متوسط",
+  "description": "تأجير كراسي ملكية وشفافة، تأجير خيام للمناسبات، كوش أفراح، شاشات عرض كبيرة، طاولات ضيافة، تجهيز حفلات متكاملة في الخبر والشرقية.",
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": 26.2172,
+    "longitude": 50.1971
+  }
+}
+</script>
+  
 <footer>
   جميع الحقوق محفوظة &copy; 2025 حفلات ومناسبات
  </footer>
