--- a/index.html
+++ b/index.html
@@ -1201,7 +1201,7 @@
 {
   "@context": "https://schema.org",
   "@type": "LocalBusiness",
-  "name": "تأجير خيام وكراسي وطاولات في الخبر",
+  "name": "تأجير طاولات وكراسي تأجير كنب",
   "image": "https://i.postimg.cc/QxMDh9df/favicon.png",
   "url": "https://www.lamasat.store",
   "telephone": "+966559534118",
