--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>تأجير طاولات وكراسي تاجير كنب - تاجير كوش تاجير جلسات</title>
 <meta name="description" content="تأجير كراسي وطاولات وكنب بالرياض والشرقية وجدة بأسعار منافسة. جميع مستلزمات الحفلات والمناسبات مع خدمة التوصيل.">
-  </head>
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17518401958">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17518401958');
+</script>
+</head>
 <body>
   <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WTC83WPS"
