--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <h1>تأجير طاولات وكراسي تأجير كوشات تاجير كنب تاجير مستلزمات الحفلات والمناسبات</h1>
 <div class="contact-buttons" style="text-align: center; margin: 30px 0;">
   <!-- زر واتساب -->
-  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب" style="display: inline-block; margin: 10px;">
+  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب" style="display: inline-block; margin: 10px;"
+     onclick="gtag('event', 'conversion', {'send_to': 'AW-17518401958/07E8CJ_095cbEKaztqFB'});">
     <img 
       src="https://cdn-icons-png.flaticon.com/512/733/733585.png" 
       alt="واتساب" 
@@ -271,7 +272,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </a>
 
   <!-- زر اتصال -->
-  <a href="tel:0559534118" aria-label="اتصال مباشر" style="display: inline-block; margin: 10px;">
+  <a href="tel:0559534118" aria-label="اتصال مباشر" style="display: inline-block; margin: 10px;"
+     onclick="gtag('event', 'conversion', {'send_to': 'AW-17518401958/07E8CJ_095cbEKaztqFB'});">
     <img 
       src="https://cdn-icons-png.flaticon.com/512/597/597177.png" 
       alt="اتصال" 
