--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>تأجير طاولات وكراسي تاجير كنب - تاجير كوش تاجير جلسات</title>
-<meta name="description" content="تأجير كراسي وطاولات وكنب بالرياض والشرقية وجدة بأسعار منافسة. جميع مستلزمات الحفلات والمناسبات مع خدمة التوصيل.">
+  <title>لمسات لتأجير لوازم المناسبات والحفلات تأجير طاولات وكراسي تاجير كنب - تاجير كوش تاجير جلسات</title>
+  <meta name="application-name" content="لمسات للحفلات والمناسبات">
+<meta name="description" content="تأجير كراسي وطاولات تأجير كنب تأجير مكيفات تأجير جلسات تأجير طاولات بالرياض والشرقية وجدة بأسعار منافسة. جميع مستلزمات الحفلات والمناسبات مع خدمة التوصيل.">
  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17518401958">
 </script>
@@ -34,7 +35,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 {
   "@context": "https://schema.org",
   "@type": "Organization",
-  "name": "لمسة للحفلات والمناسبات",
+  "name": "لمسات للحفلات والمناسبات",
   "url": "https://www.lamasat.store",
   "logo": "https://www.lamasat.store/logo.png",
   "sameAs": [
@@ -241,6 +242,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </script>
 </head>
 <body>
+
+ </header>
+<section aria-label="محتوى تحسين السيو" style="background: rgba(255,255,255,0.8); margin: 20px auto; padding: 20px; border-radius: 8px; max-width: 900px;">
+  <h2 style="color: #2e7d32;">لمسات لتأجير لوازم حفلات ومناسبات في الدمام، الخبر، الرياض، جدة</h2>
+  <p style="line-height: 1.8; color: #444;">
+    نحن متخصصون في <strong>تأجير كنب</strong> فاخر لجميع أنواع <strong>المناسبات</strong> مثل حفلات الزفاف، الاجتماعات، العزائم، حفلات التخرج. كما نوفر <strong>تأجير طاولات وكراسي</strong> بالإضافة إلى <strong>تاجير كراسي وطاولات الدمام</strong>.
+    تشمل خدماتنا أيضًا <strong>تأجير خيام</strong>، <strong>تأجير مكيفات</strong>، <strong>تأجير كراسي</strong>،  <strong>تأجير طاولات استقبال</strong>،  <strong>تأجير طاولات الدمام</strong>،  <strong>تأجير سماعات</strong>،  <strong>تأجير كنب الدمام</strong>،  <strong>تأجير كنب جدة</strong>،  <strong>تأجير كنب الرياض</strong>،  <strong>تأجير شاشات عرض</strong>،  <strong>تأجير طاولات وكراسي الدمام</strong>،  <strong>تأجير طاولات وكراسي جدة</strong>، <strong>تاجير كراسي</strong>،  <strong>تأجير جلسات</strong>،  <strong>تأجير جلسات مغربية</strong>، <strong>تاجير مكيفات</strong>، <strong>تاجير سجاد ملكي</strong>، <strong>تاجير كوش افراح</strong>، <strong>قهوجيين وصبابين</strong>، و<strong>تاجير كوش جدة</strong> للحفلات.
+    نخدم مدن المنطقة الشرقية: <strong>الدمام، الخبر، الظهران، الجبيل، سيهات، القطيف، الأحساء</strong> بالإضافة إلى <strong>الرياض</strong> و<strong>جدة</strong>.
+لمسات لتأجير جميع لوازم الحفلات والمناسبات: تأجير خيام، تأجير جلسات شعبية، تأجير مكيفات، تأجير كنب، تأجير شاشات عرض، تأجير جلسات مغربية ، تأجير سماعات، تأجير طاولات وكراسي، تأجير ركن ضيافة، قهوجيين وصبابين، تأجير مسارح، تأجير دفايات، تأجير كراسي، تأجير طاولات، في الدمام، الرياض، وجدة. جودة عالية وأسعار منافسة وخدمة سريعة.
+ </p>
+</section>
   
 <header>
   <div class="logo">حفلات ومناسبات</div>
@@ -257,7 +269,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <main>
 
-<h1>تأجير طاولات وكراسي تأجير كوشات تاجير كنب تاجير مستلزمات الحفلات والمناسبات</h1>
+<h1>تأجير طاولات وكراسي تأجير مكيفات تأجير سماعات تاجير كنب تاجير مستلزمات الحفلات والمناسبات</h1>
 <div class="contact-buttons" style="text-align: center; margin: 30px 0;">
   <!-- زر واتساب -->
   <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب" style="display: inline-block; margin: 10px;"
@@ -286,7 +298,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   
  <!-- تأجير طاولات وكراسي -->
   <section id="tables-chairs" class="service">
-    <h2>تأجير طاولات وكراسي تاجير طاولات تاجير كراسي</h2>
+    <h2>تأجير طاولات وكراسي</h2>
     <div class="images-container">
     <img src="https://i.postimg.cc/v8qHTgCH/b5bd6e6a-bf35-4b58-98f2-658038b580fc.jpg" alt="" />
     <img src="https://i.postimg.cc/GtNwq9cY/IMG-3035.jpg" width="400" />
@@ -345,7 +357,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <h3>تأجير طاولات بالرياض</h3>
   <h3>تاجير طاولات بالدمام</h3>
   <h3>تاجير طاولات بجدة</h3>
-  <h3>تاجير كراسي وطاولات</h3>
+  <h3>تأجير كراسي وطاولات</h3>
   <h3>تاجير كراسي</h3>
   <h3>تأجير طاولات</h3>
   <h3>تاجير كراسي ملكي</h3>
@@ -438,7 +450,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </ul>
 
      <h3>مميزات خدمة تأجير الكنب</h3>
-  <h3>تأجير كنب بالرياض</h3>
+  <h3>تأجير كنب</h3>
   <h3>تاجير كنب بالدمام</h3>
   <h3>تاجير كنب بجدة</h3>
   <h3>تاجير كنب ملكي</h3>
@@ -1085,17 +1097,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     }, { passive: true });
   </script>
 
-  <!-- تعريف الشعار لمحركات البحث (Google Logo Schema) -->
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Organization",
-  "name": "تأجير كراسي ملكية تأجير طاولات حفلات تأجير خيام مناسبات تأجير شاشات كبيرة تأجير كوش أفراح",
-  "url": "https://www.example.com",
-  "logo": "https://i.postimg.cc/3wMrKbN0/logo.png"
-}
-</script>
-
 <!-- FAQ Schema -->
 <script type="application/ld+json">
 {
@@ -1127,7 +1128,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 {
   "@context": "https://schema.org",
   "@type": "LocalBusiness",
-  "name": "تأجير طاولات وكراسي تأجير كنب",
+  "name": "لمسات للحفلات والمناسبات",
   "image": "https://i.postimg.cc/QxMDh9df/favicon.png",
   "url": "https://www.lamasat.store",
   "telephone": "+966559534118",
