--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>لمسات لتأجير لوازم المناسبات والحفلات تأجير طاولات وكراسي تاجير كنب - تاجير كوش تاجير جلسات</title>
-  <meta name="application-name" content="لمسات للحفلات والمناسبات">
+  <title>لمسة لتأجير لوازم المناسبات والحفلات تأجير طاولات وكراسي تاجير كنب - تاجير كوش تاجير جلسات</title>
+  <meta name="application-name" content="لمسة للحفلات والمناسبات">
 <meta name="description" content="تأجير كراسي وطاولات تأجير كنب تأجير مكيفات تأجير جلسات تأجير طاولات بالرياض والشرقية وجدة بأسعار منافسة. جميع مستلزمات الحفلات والمناسبات مع خدمة التوصيل.">
  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17518401958">
@@ -35,7 +35,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 {
   "@context": "https://schema.org",
   "@type": "Organization",
-  "name": "لمسات للحفلات والمناسبات",
+  "name": "لمسة للحفلات والمناسبات",
   "url": "https://www.lamasat.store",
   "logo": "https://www.lamasat.store/logo.png",
   "sameAs": [
@@ -1009,7 +1009,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </main>
 
   <footer>
-    &copy; 2025 مؤسسة لتاجير لوازم الحفلات والمناسبات. جميع الحقوق محفوظة.
+    &copy; 2025 مؤسسة لمسة لتاجير لوازم الحفلات والمناسبات. جميع الحقوق محفوظة.
     <p>للاستفسارات: <a href="tel:0507219883">0559534118</a> | <a href="https://wa.me/966559534118">واتساب</a></p>
   </footer>
 
@@ -1128,7 +1128,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 {
   "@context": "https://schema.org",
   "@type": "LocalBusiness",
-  "name": "لمسات للحفلات والمناسبات",
+  "name": "لمسة للحفلات والمناسبات",
   "image": "https://i.postimg.cc/QxMDh9df/favicon.png",
   "url": "https://www.lamasat.store",
   "telephone": "+966559534118",
@@ -1161,7 +1161,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </script>
   
 <footer>
-  جميع الحقوق محفوظة &copy; 2025 حفلات ومناسبات
+  جميع الحقوق محفوظة &copy; 2025 لمسة للحفلات والمناسبات
  </footer>
 
 </body>
