--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <main>
 
-<h1>تأجير طاولات وكراسي تأجير مكيفات تأجير سماعات تاجير كنب تاجير مستلزمات الحفلات والمناسبات</h1>
+<h1>تأجير طاولات وكراسي تأجير مكيفات تأجير سماعات تأجير كنب تأجير مستلزمات الحفلات والمناسبات</h1>
 <div class="contact-buttons" style="text-align: center; margin: 30px 0;">
   <!-- زر واتساب -->
   <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب" style="display: inline-block; margin: 10px;"
@@ -304,8 +304,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <img src="https://i.postimg.cc/GtNwq9cY/IMG-3035.jpg" width="400" />
     </div>
  <p>
-   نوفر في <strong>لوازم حفلات</strong> خدمة <strong>تأجير طاولات وكراسي</strong> <strong>تاجير كراسي</strong> <strong>تاجير طاولات</strong> <strong>كنب كراسي وطاولات</strong> <strong>طاولات للايجار</strong> <strong>تاجير طاولات وكراسي الدمام</strong>  <strong>تأجير طاولات وكراسي جدة</strong>
-     تاجير كراسي، للمهرجانات للمناسبات الخاصة. 
+   نوفر في <strong>لوازم حفلات</strong> خدمة <strong>تأجير طاولات وكراسي</strong> <strong>تأجير كراسي</strong> <strong>تأجير طاولات</strong> <strong>كراسي وطاولات</strong> <strong>طاولات للايجار</strong> <strong>تأجير طاولات وكراسي الدمام</strong>  <strong>تأجير طاولات وكراسي جدة</strong>
+     تأجير كراسي، للمهرجانات للمناسبات الخاصة. 
     جميع مع تركيب سريع وتوصيل داخل <strong>الرياض، جدة، الدمام، والخبر</strong> ايجار طاولات بالخبر   
      
  استمتع بتجربة استئجار طاولات حفلات عالية الجودة. نحن نوفر طاولات وكراسي حفلات ومناسبات للايجار، بالإضافة إلى تاجير كنب ولوازم حفلات متنوعة. احجز طاولات وكراسي حفلات و مناسبات القادمة بسهولة وبأسعار مناسبة
@@ -348,19 +348,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <li>طاولات.</li>
     <li>كراسي.</li>
     <li>تأجير طاولات وكراسي.</li>
-    <li>تاجير طاولات وكراسي الرياض.</li>
-    <li>تاجير طاولات وكراسي الدمام.</li>
+    <li>تأجير طاولات وكراسي الرياض.</li>
+    <li>تأجير طاولات وكراسي الدمام.</li>
     <li>تاجير طاولات وكراسي جدة.</li>
   </ul>
 
      <h3>مميزات خدمة تأجير الطاولات والكراسي</h3>
   <h3>تأجير طاولات بالرياض</h3>
-  <h3>تاجير طاولات بالدمام</h3>
-  <h3>تاجير طاولات بجدة</h3>
+  <h3>تأجير طاولات بالدمام</h3>
+  <h3>تأجير طاولات بجدة</h3>
   <h3>تأجير كراسي وطاولات</h3>
-  <h3>تاجير كراسي</h3>
+  <h3>تأجير كراسي</h3>
   <h3>تأجير طاولات</h3>
-  <h3>تاجير كراسي ملكي</h3>
+  <h3>تأجير كراسي ملكي</h3>
   <h3>طاولات للايجار</h3>
   <ul>
     <li>خدمة 24 ساعة مع سرعة في التركيب والفك.</li>
@@ -410,7 +410,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
    
   <!-- تأجير كنب -->
   <section id="kanab" class="service">
-    <h2>تأجير كنب تاجير كنب ثلاثي تأجير كنب ملكي بأفخم التصاميم</h2>
+    <h2>تأجير كنب تأجير كنب ثلاثي تأجير كنب ملكي بأفخم التصاميم</h2>
     <div class="images-container">
      <img src="https://i.postimg.cc/ZKbR0288/a3cfc92d-e51d-47c8-a4c5-02553e010ed6.jpg" />
 <img src="https://i.postimg.cc/d0rv5jRQ/d82873e4-678a-45fd-bb2d-3df556fd435a.jpg" />
