--- a/index.html
+++ b/index.html
@@ -932,24 +932,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </p>
  
   <!-- أزرار التواصل -->
-<div class="contact-buttons" style="text-align: center; margin: 30px 0;">
+<div class="contact-buttons" style="text-align: center; margin: 20px 0;">
   <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب" style="display: inline-block; margin: 10px;">
-    <img 
-      src="https://cdn-icons-png.flaticon.com/512/733/733585.png" 
-      alt="واتساب" 
-      width="60" 
-      height="60" 
-      style="cursor: pointer;" 
-    />
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="60" height="60" style="cursor: pointer;" />
   </a>
   <a href="tel:0559534118" aria-label="اتصال مباشر" style="display: inline-block; margin: 10px;">
-    <img 
-      src="https://cdn-icons-png.flaticon.com/512/597/597177.png" 
-      alt="اتصال" 
-      width="60" 
-      height="60" 
-      style="cursor: pointer;" 
-    />
+    <img src="https://cdn-icons-png.flaticon.com/512/597/597177.png" alt="اتصال" width="60" height="60" style="cursor: pointer;" />
   </a>
 </div>
 
