--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>لمسة لتأجير لوازم المناسبات والحفلات تأجير طاولات وكراسي تاجير كنب - تاجير كوش تاجير جلسات</title>
+  <style>
+body {
+  background: linear-gradient(to bottom, rgba(0, 128, 0, 0.05), rgba(255, 255, 255, 1));
+}
+</style>
   <meta name="application-name" content="لمسة للحفلات والمناسبات">
 <meta name="description" content="تأجير كراسي وطاولات تأجير كنب تأجير مكيفات تأجير جلسات تأجير طاولات بالرياض والشرقية وجدة بأسعار منافسة. جميع مستلزمات الحفلات والمناسبات مع خدمة التوصيل.">
  <!-- Google tag (gtag.js) -->
@@ -256,7 +261,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </nav>
 </header>
 
-   </header>
+   <header>
+     <img src="https://upload.wikimedia.org/wikipedia/commons/0/0d/Flag_of_Saudi_Arabia.svg" 
+     alt="العلم السعودي" style="width:40px; height:auto; margin-left:10px;">
 <section aria-label="محتوى تحسين السيو" style="background: rgba(255,255,255,0.8); margin: 20px auto; padding: 20px; border-radius: 8px; max-width: 900px;">
   <h2 style="color: #2e7d32;">لمسة لتأجير لوازم حفلات ومناسبات في الدمام، الخبر، الرياض، جدة</h2>
   <p style="line-height: 1.8; color: #444;">
@@ -267,7 +274,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
  </p>
 </section>
 <main>
+</header>
 
+  <div style="background:#006c35; color:#fff; text-align:center; padding:10px; font-size:18px; font-weight:bold;">
+  🇸🇦 كل عام ووطننا بخير – اليوم الوطني السعودي
+</div>
 <h1>تأجير طاولات وكراسي تأجير مكيفات تأجير سماعات تاجير كنب تاجير مستلزمات الحفلات والمناسبات</h1>
 <div class="contact-buttons" style="text-align: center; margin: 30px 0;">
   <!-- زر واتساب -->
