--- a/index.html
+++ b/index.html
@@ -355,10 +355,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <li>طاولات وكراسي.</li>
     <li>طاولات.</li>
     <li>كراسي.</li>
-    <li>تأجير طاولات وكراسي.</li>
-    <li>تاجير طاولات وكراسي الرياض.</li>
-    <li>تاجير طاولات وكراسي الدمام.</li>
-    <li>تاجير طاولات وكراسي جدة.</li>
+    <li>كراسي وطاولات.</li>
+    <li>طاولات وكراسي الرياض.</li>
+    <li>طاولات وكراسي الدمام.</li>
   </ul>
 
      <h3>مميزات خدمة تأجير الطاولات والكراسي</h3>
@@ -452,14 +451,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <li>كنب ملكي.</li>
     <li>كنب ثلاثي.</li>
     <li>تأجير كنب.</li>
-    <li>تاجير كنب الرياض.</li>
-    <li>تاجير كنب الدمام.</li>
-    <li>تاجير كنب جدة.</li>
+    <li>كنب الرياض.</li>
+    <li>كنب الدمام.</li>
+    <li>كنب جدة.</li>
   </ul>
 
      <h3>مميزات خدمة تأجير الكنب</h3>
   <h3>تأجير كنب</h3>
-  <h3>تاجير كنب بالدمام</h3>
+  <h3>تأجير كنب بالدمام</h3>
   <h3>تاجير كنب بجدة</h3>
   <h3>تاجير كنب ملكي</h3>
   <h3>تاجير كنب ثلاثي</h3>
@@ -534,10 +533,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <li>كوش افراح.</li>
     <li>طاولات كوكتيل.</li>
     <li>طاولات استقبال.</li>
-    <li>تأجير كوش.</li>
-    <li>تاجير طاولات استقبال.</li>
-    <li>تاجير طاولات كوكتيل.</li>
-    <li>تاجير كوشات.</li>
+    <li>كوش.</li>
+    <li>طاولات استقبال جدة.</li>
+    <li>طاولات استقبال الرياض.</li>
+    <li>طاولات استقبال الدمام.</li>
+    <li>طاولات كوكتيل الدمام.</li>
+    <li>كوشات الدمام.</li>
+    <li>كوشات الرياض.</li>
+    <li>كوشات جدة.</li>
   </ul>
     
    <h3>مميزات خدمة تأجير الكوش وطاولات الاستقبال</h3>
@@ -647,13 +650,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <li>ممرات بنفسجية.</li>
     <li>مكبرات صوت بجودة عالية.</li>
     <li>سجاد ملكي.</li>
-    <li>تأجير شاشات.</li>
-    <li>تاجير ليزرات.</li>
-    <li>تاجير حواجز.</li>
-    <li>تاجير ممرات.</li>
-    <li>تاجير سجاد.</li>
-    <li>تاجير شاشات عرض.</li>
-    <li>تاجير مكبرات صوت.</li>
+    <li>شاشات عرض الرياض.</li>
+    <li>شاشات عرض جدة.</li>
+    <li>شاشات عرض الدمام.</li>
+    <li>شاشات عرض الخبر.</li>
+    <li>ليزرات.</li>
+    <li>حواجز.</li>
+    <li>ممرات.</li>
+    <li>سجاد.</li>
+    <li>شاشات عرض.</li>
+    <li>مكبرات صوت.</li>
   </ul>
 
   <h3>مميزات خدمة تأجير الشاشات ومكبرات الصوت</h3>
@@ -740,13 +746,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <li>خيام ملكية للمناسبات الكبيرة.</li>
     <li>بيت شعر تقليدي يعكس الأصالة والتراث.</li>
     <li>خيام يومية للإيجار القصير في المناسبات الصغيرة.</li>
-    <li>تأجير خيام.</li>
-    <li>تاجير خيام الرياض.</li>
-    <li>تاجير خيام جدة.</li>
-    <li>تاجير خيام الدمام.</li>
-    <li>خيام في الرياض.</li>
-    <li>خيام في الدمام.</li>
-    <li>خيام في جدة.</li>
+    <li>خيام.</li>
+    <li>خيام الرياض.</li>
+    <li>خيام جدة.</li>
+    <li>خيام الدمام.</li>
+    <li>بيت شعر.</li>
+    <li>خيام اوروربية.</li>
+    <li>خيام اوروبية الخبر.</li>
+    <li>خيام اوروبية الدمام.</li>
   </ul>
 
   <h3>مميزات خدمة تأجير الخيام لدينا</h3>
@@ -832,13 +839,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <li>جلسات.</li>
     <li>جلسات شعبية يعكس الأصالة والتراث.</li>
     <li>جلسات يومية للإيجار القصير في المناسبات الصغيرة.</li>
-    <li>تأجير جلسات.</li>
-    <li>تاجير جلسات الرياض.</li>
-    <li>تاجير جلسات جدة.</li>
-    <li>تاجير جلسات الدمام.</li>
+    <li>جلسات.</li>
+    <li>جلسات شعبية الرياض.</li>
+    <li>جلسات شعبية جدة.</li>
+    <li>جلسات شعبية الدمام.</li>
     <li>جلسات شعبية.</li>
     <li>جلسات مغربية.</li>
-    <li>جلسات في الدمام.</li>
+    <li>جلسات مغربي الدمام.</li>
   </ul>
 
   <h3>مميزات خدمة تأجير الجلسات لدينا</h3>
